[package]
name = "bevy_roguelike"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2",
  "getrandom/wasm-bindgen",
]


[dependencies]
bevy = {version="0.5.0", default-features = false}
bevy_webgl2 = {version="0.5.0", optional = true}
getrandom = { version = "0.2"}
rand = "0.8.0"