[package]
name = "bevy_roguelike"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2",
  "getrandom/wasm-bindgen",
  "console_error_panic_hook",
]

[dependencies]
line_drawing = "0.8.1"
bitflags = "1.0"
bevy = {version="0.5.0", default-features = false}
bevy_webgl2 = {version="0.5.0", optional = true}
rand = "0.8.0"
getrandom = { version = "0.2"}
console_error_panic_hook = {version="0.1", optional = true}